--- a/frontend/src/StudentApplication/StudentAppItem.css
+++ b/frontend/src/StudentApplication/StudentAppItem.css
@@ -1,49 +1,26 @@
+
 .application-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: normal;
+    align-items: normal;
     padding: 0.5rem;
     margin: 1rem 0;
     background-color: #F0F8FF;
+    border-radius: 12px;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
   }
-  
-  .application-item__description {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    align-items: normal;
-    flex-flow: column-reverse;
-    justify-content: flex-start;
-    flex: 1;
-  }
-  
+
   .application-item h2 {
-    font-size: 1rem;
+    font-size: 1.2rem;
     flex: 1;
     margin: 0 1rem;
     color: #131314;
-  }
-  
-  @media (min-width: 580px) {
-    .application-item__description {
-      flex-direction: row;
-      align-items: normal;
-      justify-content: right;
-      flex: 1;
-    }
-  
-  
-    .application-item__description h2 {
-      font-size: 1rem;
-    }
+    text-align: center;
   }
 
-  .application-item__description_button {
-      background: none;
-      border: none;
-      padding: 0;
-      font-family: arial, sans-serif;
-      color: #069;
-      text-decoration: underline;
-      cursor: pointer;
-    }
+  .application-item h1 {
+    font-size: 1.5rem;
+    flex: 1;
+    margin: 0 1rem;
+    color: #131314;
+    text-align: left;
+  }
