--- a/frontend/src/Institutions/institutions-components/institutions/SchoolItem.css
+++ b/frontend/src/Institutions/institutions-components/institutions/SchoolItem.css
@@ -1,44 +1,31 @@
-.school-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.5rem;
-    margin: 1rem 0;
-    background-color: #F0F8FF;
-  }
-  
-  .school-item__description {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    align-items: normal;
-    flex-flow: column-reverse;
-    justify-content: flex-start;
-    flex: 1;
-  }
-  
-  .school-item h2 {
-    font-size: 1rem;
-    flex: 1;
-    margin: 0 1rem;
-    color: #131314;
-  }
-  
-  @media (min-width: 580px) {
-    .school-item__description {
-      flex-direction: row;
-      align-items: normal;
-      justify-content: right;
-      flex: 1;
-    }
-  
-  
-    .school-item__description h2 {
-      font-size: 1rem;
-    }
-  }
 
-  .school-item__description_button {
+.school-item {
+  justify-content: normal;
+  align-items: normal;
+  padding: 0.5rem;
+  margin: 1rem 0;
+  background-color: #F0F8FF;
+  border-radius: 12px;
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+}
+
+.school-item h2 {
+  font-size: 1rem;
+  flex: 1;
+  margin: 0 1rem;
+  color: #131314;
+  text-align: center;
+}
+
+.school-item h1 {
+  font-size: 1.5rem;
+  flex: 1;
+  margin: 0 1rem;
+  color: #131314;
+  text-align: left;
+}
+
+.school-item button {
       background: none;
       border: none;
       padding: 0;
@@ -46,5 +33,6 @@
       color: #069;
       text-decoration: underline;
       cursor: pointer;
-    }
+      align-items: ;
+}
     
