Added modal and responsive form to school page

--- a/frontend/src/Institutions/institutions-components/new-institution/NewSchool.css
+++ b/frontend/src/Institutions/institutions-components/new-institution/NewSchool.css
@@ -18,6 +18,7 @@
     color: #003366;
     border-radius: 12px;
     margin-right: 1rem;
+    text-decoration: none;
   }
   
   .new-expense button:hover,
