--- a/frontend/src/Institutions/institutions-components/institutions/Schools.css
+++ b/frontend/src/Institutions/institutions-components/institutions/Schools.css
@@ -8,8 +8,15 @@
     max-width: 75%;
     overflow: auto;
     text-align:justify;
+    border-radius: 12px;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
 }
 
-.filter {
-  right:0;
-}
+.applications h3 {
+    font-size: 1.5rem;
+    flex: 1;
+    margin: 2 2rem;
+    color: #e7e7ec;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+  }
