--- a/frontend/src/Institutions/institutions-components/institutions/SchoolFilter.css
+++ b/frontend/src/Institutions/institutions-components/institutions/SchoolFilter.css
@@ -1,27 +1,7 @@
 
-.expenses-filter {
+.filter {
     color: #F0F8FF;
     padding: 0 1rem;
     right: 0;
-  }
-  
-  .expenses-filter__control {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: space-between;
-    margin: 1rem 0;
-  }
-  
-  .expenses-filter label {
-    font-weight: bold;
-    margin-bottom: 0.5rem;
-  }
-  
-  .expenses-filter select {
-    font: inherit;
-    padding: 0.5rem 3rem;
-    font-weight: bold;
-    border-radius: 6px;
   }
 
